<resources>
    <string name="app_name">AionMemory</string>
    <string name="garison_121">121</string>
    <string name="garison_122">122</string>
    <string name="garison_123">123</string>
    <string name="garison_124">124</string>
    <string name="garison_125">125</string>
    <string name="garison_126">126</string>
    <string name="garison_127">127</string>
    <string name="garison_128">128</string>
    <string name="label_weekly">Weekly Garrisons in Lakrum</string>
    <string name="garison_129">129</string>
    <string name="btn_save">Save</string>
    <string name="btn_reset">Reset All</string>
    <string name="btn_load">Load</string>
</resources>
