<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".WeeklyActivity">

    <CheckBox
            android:text="@string/garison_121"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/chkb121" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintTop_toBottomOf="@+id/weekly_text_view"
            android:checked="false"/>
    <CheckBox
            android:text="@string/garison_122"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/chkb122"
            app:layout_constraintTop_toBottomOf="@+id/chkb121" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" android:checked="false"/>
    <CheckBox
            android:text="@string/garison_123"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/chkb123" app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintTop_toBottomOf="@+id/chkb122" android:checked="false"/>
    <CheckBox
            android:text="@string/garison_124"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/chkb124" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            app:layout_constraintTop_toBottomOf="@+id/chkb123" android:checked="false"/>
    <CheckBox
            android:text="@string/garison_125"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/chkb125" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/chkb124" android:layout_marginStart="8dp"
            android:checked="false"/>
    <CheckBox
            android:text="@string/garison_126"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/chkb126"
            app:layout_constraintTop_toBottomOf="@+id/chkb128"
            app:layout_constraintStart_toStartOf="@+id/chkb128" android:checked="false"/>
    <CheckBox
            android:text="@string/garison_127"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/chkb127" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            app:layout_constraintTop_toBottomOf="@+id/chkb126" android:checked="false"/>
    <TextView
            android:text="@string/label_weekly"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/weekly_text_view" android:textAppearance="@style/TextAppearance.AppCompat.Headline"
            android:textAlignment="center" android:paddingVertical="5dp" app:layout_constraintTop_toTopOf="parent"/>
    <CheckBox
            android:text="@string/garison_128"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/chkb128"
            app:layout_constraintTop_toBottomOf="@+id/chkb125" app:layout_constraintStart_toStartOf="@+id/chkb125"
            android:checked="false"/>
    <CheckBox
            android:text="@string/garison_129"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/chkb129" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/chkb127" android:layout_marginStart="8dp"
            android:checked="false"/>
    <Button
            android:text="@string/btn_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginEnd="4dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginBottom="8dp"
            android:id="@+id/btn_save" android:onClick="save"/>
    <Button
            android:text="@string/btn_reset"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btn_reset" app:layout_constraintEnd_toStartOf="@+id/btn_load"
            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintHorizontal_bias="0.659"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="8dp" android:onClick="reset"/>
    <Button
            android:text="@string/btn_load"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btn_load" app:layout_constraintEnd_toStartOf="@+id/btn_save"
            android:layout_marginEnd="48dp" app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="8dp" android:onClick="load"/>
</android.support.constraint.ConstraintLayout>